// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App matches snapshot 1`] = `
<div
  className="jarbek-home"
>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Andrew Jarombek
    </title>
    <meta
      content="Andrew Jarombek"
      name="author"
    />
    <meta
      content="Andrew Jarombek's Personal Website and
                            Software Development Blog"
      name="description"
    />
    <link
      href="https://jarombek.com"
      rel="canonical"
    />
    <link
      href="test-file-stub"
      rel="icon"
    />
  </HelmetWrapper>
  <div
    className="jarbek-home-main"
  >
    <div
      className="jarbek-home-main-overlay"
    >
      <div
        className="jarbek-home-title-container"
      >
        <h1
          className="jarbek-home-title"
        >
          Andrew Jarombek
        </h1>
      </div>
      <p
        className="jarbek-home-sub-title"
      >
        Software Development Hub
      </p>
      <Link
        className="jarbek-home-blog-button"
        replace={false}
        to="/blog"
      >
        <Button
          activeColor="primary"
          font="sylexiad"
          onClick={[Function]}
          passiveColor="primary"
          size="large"
        >
          BLOG
        </Button>
      </Link>
      <div
        className="jarbek-home-arrow"
      >
        <TitleImage
          link="#features"
          src="./assets/down.png"
          title=""
        />
      </div>
    </div>
  </div>
  <div
    className="jarbek-home-break"
  >
    <p>
      Developing Software Since 
      <strong>
        Summer 2016
      </strong>
    </p>
  </div>
  <FeatureList
    featureList={
      Array [
        Object {
          "backgroundColor": null,
          "backgroundPicture": "computer",
          "content": Object {
            "picture": null,
            "text": "Take an interactive tour of my software development career, starting as a 
                student at St. Lawrence University.",
          },
          "link": "/resume",
          "orientation": "left",
          "title": "RESUME",
        },
        Object {
          "backgroundColor": "white",
          "backgroundPicture": null,
          "content": Object {
            "picture": "https://asset.jarombek.com/logos/tech_logos.svg",
            "text": "Analyze which programming languages and frameworks I use the most with 
                dynamic charts.",
          },
          "link": "/stats",
          "orientation": "right",
          "title": "STATISTICS",
        },
        Object {
          "backgroundColor": null,
          "backgroundPicture": "kayak",
          "content": Object {
            "picture": null,
            "text": "Read software development articles I've written and follow my progress as a 
                programmer.",
          },
          "link": "/blog",
          "orientation": "left",
          "title": "ARTICLES",
        },
      ]
    }
    id="features"
  />
  <TitleImage
    className="footer-icon"
    link="https://github.com/AJarombek"
    src="./assets/github.png"
    title="GITHUB"
  />
</div>
`;

exports[`BlogPost No Sources matches snapshot 1`] = `
<div
  className="jarombek-blog-post"
>
  <div
    className="jarombek-blog-headers"
  >
    <p
      className="jarombek-blog-type"
    >
      DISCOVERY
    </p>
    <p
      className="jarombek-blog-date"
    >
      October 7th, 2018
    </p>
  </div>
  <Link
    className="jarombek-blog-title"
    replace={false}
    to="/blog/Test"
  >
    <p
      className="jarombek-blog-title-content"
    >
      Test
    </p>
  </Link>
  <div
    className="jarombek-blog-tags"
  >
    <TagList
      tagList={Array []}
    />
  </div>
  <div
    className="jarombek-blog-content"
  />
  <div
    className="jarombek-blog-sources"
  />
</div>
`;

exports[`BlogPost matches snapshot 1`] = `
<div
  className="jarombek-blog-post"
>
  <div
    className="jarombek-blog-headers"
  >
    <p
      className="jarombek-blog-type"
    >
      DISCOVERY
    </p>
    <p
      className="jarombek-blog-date"
    >
      October 7th, 2018
    </p>
  </div>
  <Link
    className="jarombek-blog-title"
    replace={false}
    to="/blog/Test"
  >
    <p
      className="jarombek-blog-title-content"
    >
      Test
    </p>
  </Link>
  <div
    className="jarombek-blog-tags"
  >
    <TagList
      tagList={Array []}
    />
  </div>
  <div
    className="jarombek-blog-content"
  />
  <div
    className="jarombek-blog-sources"
  >
    <p
      className="jarombek-blog-source"
      key="97ce26f2-b84d-4c15-a54c-00a70a85697e"
    >
      [1] Start
      <a
        href="jarombek.com"
      >
        Link
      </a>
      End
    </p>
  </div>
</div>
`;

exports[`Button matches snapshot 1`] = `
<div>
  <button
    className="jarbek-button passive-color-default
                                active-color-default border-color-default
                                jarbek-button-large jarbek-button-font-sylexiad"
    onClick={[Function]}
  />
</div>
`;

exports[`Definition matches snapshot 1`] = `
<div>
  <div
    className="jarombek-def-above"
    id="snapshot-testing"
  >
     
  </div>
  <div
    className="jarombek-def"
  >
    <a
      href="#snapshot-testing"
    >
      <p
        className="jarombek-def-word"
      >
        Snapshot Testing
      </p>
    </a>
    <p
      className="jarombek-def-desc"
    >
       
    </p>
  </div>
</div>
`;

exports[`Empty TagList matches snapshot 1`] = `
<div
  className="jarombek-tag-list"
>
  <p>
    No Tags
  </p>
</div>
`;

exports[`PictureButton matches snapshot 1`] = `
<div>
  <button
    className="jarbek-button active-color-default
                                passive-color-undefined jarbek-button-large"
  >
    <div
      className="jarbek-picture-button"
    >
      <div
        className="jarbek-pb-picture"
      >
        <img
          src={
            Object {
              "default": [Function],
            }
          }
        />
      </div>
      <div
        className="jarbek-pb-text"
      >
        Test
      </div>
    </div>
  </button>
</div>
`;

exports[`Tag matches snapshot 1`] = `
<div
  className="jarombek-tag jarombek-tag-large"
>
  <div
    className="jarombek-tag-color-javascript"
  >
    <figure>
      <img
        className="jarombek-tag-picture"
        src="https://asset.jarombek.com/jarombek.png"
      />
    </figure>
    <p
      className="jarombek-tag-name"
    >
      JavaScript
    </p>
  </div>
</div>
`;

exports[`TagList matches snapshot 1`] = `
<div
  className="jarombek-tag-list"
>
  <Tag
    color="javascript"
    id="js"
    key="JavaScript"
    name="JavaScript"
    picture=""
    showPicture={true}
  />
</div>
`;

exports[`TitleImage matches snapshot 1`] = `
<div>
  <figure
    className="jarbek-figure"
  >
    <img
      src="test-file-stub"
    />
  </figure>
  <p
    className="jarbek-image-title"
  >
    Test
  </p>
</div>
`;

exports[`TitleImage with Link matches snapshot 1`] = `
<div>
  <figure
    className="jarbek-figure"
  >
    <a
      href="jarombek.com"
    >
      <img
        src="test-file-stub"
      />
    </a>
  </figure>
  <p
    className="jarbek-image-title"
  >
    Test
  </p>
</div>
`;

exports[`WebsiteNav matches snapshot 1`] = `
<nav
  className="jarombek-nav"
>
  <NavLink
    activeClassName="active"
    ariaCurrent="true"
    className="jarombek-nav-left"
    to="/"
  >
    <figure>
      <img
        src="test-file-stub"
      />
    </figure>
  </NavLink>
  <NavLink
    activeClassName="active"
    ariaCurrent="true"
    className="jarombek-nav-middle"
    to="/"
  >
    Andrew Jarombek
  </NavLink>
  <div
    className="jarombek-nav-right"
    onClick={[Function]}
  >
    <Button
      activeColor="primary"
      className="subscribe-button"
      font="sylexiad"
      onClick={[Function]}
      passiveColor="default"
      size="medium"
    >
      SUBSCRIBE
    </Button>
  </div>
</nav>
`;

exports[`WebsiteTemplate matches snapshot 1`] = `
<div
  className="jarombek-template"
>
  <WebsiteNav
    hideSubscribe={false}
    subscribeAction={[Function]}
  />
  <p>
    Hello
  </p>
</div>
`;
